--- a/src/packages/utils/package.json
+++ b/src/packages/utils/package.json
@@ -5,7 +5,7 @@
   "files": [
     "dist/*"
   ],
-  "description": "Creativedraw utilities functions",
+  "description": "Creativeboard utilities functions",
   "publishConfig": {
     "access": "public"
   },
